deployment/flux-kustomizer/staging-env/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-env-ghostblog
  namespace: staging-env-ghostblog
spec:
  type: ClusterIP
  selector:
    app: staging-env-ghostblog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
