deployment/flux-kustomizer/staging-env/staging-env-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-env-ingress
  namespace: staging-env-ghostblog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "staging-env.brexit4u.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: staging-env-ghostblog
            port:
              number: 80
